--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "arraylist.h": "c",
         "doublylist.h": "c",
-        "llstack.h": "c"
+        "llstack.h": "c",
+        "expressionparser.h": "c",
+        "farraystack.h": "c"
     }
 }
