--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
     "files.associations": {
         "arraylist.h": "c",
         "doublylist.h": "c",
-        "llstack.h": "c"
+        "llstack.h": "c",
+        "tester.h": "c",
+        "sstream": "c",
+        "ctype.h": "c"
     }
 }
